Circulos de Servicios con animación

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="es"></html>
 <head>
   <meta charset="UTF-8"/>
   <title>Grupo NM</title>
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" href="./public/css/demo.css"/>
   <link rel="stylesheet" type="text/css" href="./public/css/slicebox.css"/>
   <link rel="stylesheet" type="text/css" href="./public/css/custom.css"/>
+  <link rel="stylesheet" type="text/css" href="./public/css/common.css"/>
+  <link rel="stylesheet" type="text/css" href="./public/css/style5.css"/>
   <script type="text/javascript" src="./public/js/vendor/modernizr.custom.46884.js"></script>
   <link rel="stylesheet" href="./public/css/styles.css"/>
 </head>
@@ -91,33 +93,89 @@
     </div>
     <!-- SERVICIOS-->
     <div id="servicios" class="Servicios">
-      <p class="Servicios-titulo">NUESTROS SERVICIOS</p>
-      <div class="Contenedor-circulos">
-        <div class="Contenedor-circulos_arriba">
-          <div class="Servicios-circulos">
-            <h2>DISEÑO DE EMPAQUES</h2>
-            <p>DESARROLLO A LA MEDIDA</p>
-          </div>
-          <div class="Servicios-circulos">
-            <h2>IMPRESIÓN</h2>
-            <p>7 COLORES POR LADO, TIPO FOTOGRAFIA PRUEBAS ANTES DE LA IMPRESIÓN</p>
-          </div>
-          <div class="Servicios-circulos">
-            <h2>INVESTIGACIÓN</h2>
-            <p>BUSQUEDA CONSTANTE DE NUEVAS ALTERNATIVAS</p>
-          </div>
-        </div>
-        <div class="Contenedor-circulos_abajo">
-          <div class="Servicios-circulos">
-            <h2 class="h2-abajo">ASESORÍA CORTES CÁRNICOS</h2>
-          </div>
-          <div class="Servicios-circulos">
-            <h2 class="h2-abajo">SERVICIO TÉCNICO</h2>
-          </div>
-          <div class="Servicios-circulos">
-            <h2 class="h2-abajo">CAPACITACIONES Y CURSOS</h2>
-          </div>
-        </div>
+      <div class="contenedorCirculos">
+        <section class="main">
+          <ul class="ch-grid">
+            <li>
+              <div class="ch-item ch-img-1">
+                <div class="ch-info-wrap">
+                  <div class="ch-info">
+                    <div class="ch-info-front ch-img-1"></div>
+                    <div class="ch-info-back">
+                      <h3>DISEÑO DE EMPAQUES</h3>
+                      <p>Desarrollo a la medida</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="ch-item ch-img-2">
+                <div class="ch-info-wrap">
+                  <div class="ch-info">
+                    <div class="ch-info-front ch-img-2"></div>
+                    <div class="ch-info-back">
+                      <h3>IMPRESIÓN</h3>
+                      <p>7 colores por lado, tipo fotografía, pruebas antes de la impresión</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="ch-item ch-img-3">
+                <div class="ch-info-wrap">
+                  <div class="ch-info">
+                    <div class="ch-info-front ch-img-3"></div>
+                    <div class="ch-info-back">
+                      <h3>INVESTIGACIÓN</h3>
+                      <p>Busqueda constante de nuevas alternativas</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="ch-item ch-img-4">
+                <div class="ch-info-wrap">
+                  <div class="ch-info">
+                    <div class="ch-info-front ch-img-4"></div>
+                    <div class="ch-info-back">
+                      <h3>ASESORÍA CORTES CÁRNICOS</h3>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="ch-item ch-img-5">
+                <div class="ch-info-wrap">
+                  <div class="ch-info">
+                    <div class="ch-info-front ch-img-5"></div>
+                    <div class="ch-info-back">
+                      <h3>SERVICIO TÉCNICO</h3>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="ch-item ch-img-6">
+                <div class="ch-info-wrap">
+                  <div class="ch-info">
+                    <div class="ch-info-front ch-img-6"></div>
+                    <div class="ch-info-back">
+                      <h3>CAPACITACIONES Y CURSOS</h3>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </section>
       </div>
     </div>
     <!-- MAQUINARIA-->
