titulo servicios restaurado

--- a/index.html
+++ b/index.html
@@ -93,89 +93,92 @@
     </div>
     <!-- SERVICIOS-->
     <div id="servicios" class="Servicios">
-      <div class="contenedorCirculos">
-        <section class="main">
-          <ul class="ch-grid">
-            <li>
-              <div class="ch-item ch-img-1">
-                <div class="ch-info-wrap">
-                  <div class="ch-info">
-                    <div class="ch-info-front ch-img-1"></div>
-                    <div class="ch-info-back">
-                      <h3>DISEÑO DE EMPAQUES</h3>
-                      <p>Desarrollo a la medida</p>
+      <p class="Servicios-titulo">NUESTROS SERVICIOS</p>
+      <div class="Servicios-cir">
+        <div class="contenedorCirculos">
+          <section class="main">
+            <ul class="ch-grid">
+              <li>
+                <div class="ch-item ch-img-1">
+                  <div class="ch-info-wrap">
+                    <div class="ch-info">
+                      <div class="ch-info-front ch-img-1"></div>
+                      <div class="ch-info-back">
+                        <h3>DISEÑO DE EMPAQUES</h3>
+                        <p>Desarrollo a la medida</p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="ch-item ch-img-2">
-                <div class="ch-info-wrap">
-                  <div class="ch-info">
-                    <div class="ch-info-front ch-img-2"></div>
-                    <div class="ch-info-back">
-                      <h3>IMPRESIÓN</h3>
-                      <p>7 colores por lado, tipo fotografía, pruebas antes de la impresión</p>
+              </li>
+              <li>
+                <div class="ch-item ch-img-2">
+                  <div class="ch-info-wrap">
+                    <div class="ch-info">
+                      <div class="ch-info-front ch-img-2"></div>
+                      <div class="ch-info-back">
+                        <h3>IMPRESIÓN</h3>
+                        <p>7 colores por lado, tipo fotografía, pruebas antes de la impresión</p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="ch-item ch-img-3">
-                <div class="ch-info-wrap">
-                  <div class="ch-info">
-                    <div class="ch-info-front ch-img-3"></div>
-                    <div class="ch-info-back">
-                      <h3>INVESTIGACIÓN</h3>
-                      <p>Busqueda constante de nuevas alternativas</p>
+              </li>
+              <li>
+                <div class="ch-item ch-img-3">
+                  <div class="ch-info-wrap">
+                    <div class="ch-info">
+                      <div class="ch-info-front ch-img-3"></div>
+                      <div class="ch-info-back">
+                        <h3>INVESTIGACIÓN</h3>
+                        <p>Busqueda constante de nuevas alternativas</p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="ch-item ch-img-4">
-                <div class="ch-info-wrap">
-                  <div class="ch-info">
-                    <div class="ch-info-front ch-img-4"></div>
-                    <div class="ch-info-back">
-                      <h3>ASESORÍA CORTES CÁRNICOS</h3>
-                      <p></p>
+              </li>
+              <li>
+                <div class="ch-item ch-img-4">
+                  <div class="ch-info-wrap">
+                    <div class="ch-info">
+                      <div class="ch-info-front ch-img-4"></div>
+                      <div class="ch-info-back">
+                        <h3>ASESORÍA CORTES CÁRNICOS</h3>
+                        <p></p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="ch-item ch-img-5">
-                <div class="ch-info-wrap">
-                  <div class="ch-info">
-                    <div class="ch-info-front ch-img-5"></div>
-                    <div class="ch-info-back">
-                      <h3>SERVICIO TÉCNICO</h3>
-                      <p></p>
+              </li>
+              <li>
+                <div class="ch-item ch-img-5">
+                  <div class="ch-info-wrap">
+                    <div class="ch-info">
+                      <div class="ch-info-front ch-img-5"></div>
+                      <div class="ch-info-back">
+                        <h3>SERVICIO TÉCNICO</h3>
+                        <p></p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="ch-item ch-img-6">
-                <div class="ch-info-wrap">
-                  <div class="ch-info">
-                    <div class="ch-info-front ch-img-6"></div>
-                    <div class="ch-info-back">
-                      <h3>CAPACITACIONES Y CURSOS</h3>
-                      <p></p>
+              </li>
+              <li>
+                <div class="ch-item ch-img-6">
+                  <div class="ch-info-wrap">
+                    <div class="ch-info">
+                      <div class="ch-info-front ch-img-6"></div>
+                      <div class="ch-info-back">
+                        <h3>CAPACITACIONES Y CURSOS</h3>
+                        <p></p>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </li>
-          </ul>
-        </section>
+              </li>
+            </ul>
+          </section>
+        </div>
       </div>
     </div>
     <!-- MAQUINARIA-->
