Cambios en la galleria de maquinaria y correcto funcionamiento

--- a/embasado.html
+++ b/embasado.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="./public/css/custom.css"/>
   <script type="text/javascript" src="./public/js/vendor/modernizr.custom.46884.js"></script>
   <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="./public/css/gallery.css"/>
   <link rel="stylesheet" href="./public/css/styles.css"/>
 </head>
 <body>
@@ -86,12 +87,15 @@
               <li>AREA DE TRABAJO DESDE 300 - 800 MM</li>
               <li>APLICACIONES CERDO, RES, Y PESCADO</li>
               <li>LIMPIEZADE CUERO Y MEMBRANA</li>
+              <label for="id1" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
         <div class="panel panel-default">
           <div role="tab" id="headingTwo" class="panel-heading">
-            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" class="collapsed">REBANADORAS DE PESO CONTROLADO   CWS</a></h4>
+            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" class="collapsed">REBANADORAS DE PESO CONTROLADO CWS</a></h4>
           </div>
           <div id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo" class="panel-collapse collapse">
             <div class="panel-body"></div>
@@ -99,6 +103,9 @@
               <li>CORTES PROGRAMABLES</li>
               <li>HASTA 10500 LONCHAS POR HORA</li>
               <li>CORTES DESDE 30 GRAMOS,CARNE FRESCA</li>
+              <label for="id2" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
@@ -111,6 +118,9 @@
             <ul>
               <li>TIRAS Y CUBOS AL MISMO TIEMPO</li>
               <li>FILETEADORAS DE CARNE FRESCA CON Y SIN HUESO</li>
+              <label for="id3" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
@@ -123,6 +133,9 @@
             <ul>
               <li>TIERNIZADOR DE CARNE</li>
               <li>TIRAS Y CUBOS DE CARNE</li>
+              <label for="id4" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
@@ -137,6 +150,9 @@
               <li>100 % ACERO INOXIDABLE</li>
               <li>SISTEMA SENCILLO, UNGER 3  (CORTE DOBLE) </li>
               <li>Y UNGER 5 (CORTE CUADRUPLE)</li>
+              <label for="id5" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
@@ -149,6 +165,9 @@
             <ul>
               <li>DESDE 15 - 52 LITROS</li>
               <li>100% ACERO INOXIDABLE</li>
+              <label for="id6" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
@@ -162,6 +181,9 @@
               <li>DESDE 35 - 275 LITROS</li>
               <li>DESDE 20 - 180 KG</li>
               <li>100% ACERO INOXIDABLE</li>
+              <label for="id7" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
@@ -175,24 +197,15 @@
               <li>DESDE 15 - 120 LITROS</li>
               <li>DESDE 10 - 90 KG</li>
               <li>100% ACERO INOXIDABLE</li>
-            </ul>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div role="tab" id="headingNine" class="panel-heading">
-            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine" class="collapsed">CORTADORAS AL POR MENOR</a></h4>
-          </div>
-          <div id="collapseNine" role="tabpanel" aria-labelledby="headingNine" class="panel-collapse collapse">
-            <div class="panel-body"></div>
-            <ul>
-              <li>TIERNIZADOR DE CARNE</li>
-              <li>TIRAS Y CUBOS DE CARNE</li>
+              <label for="id8" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
         <div class="panel panel-default">
           <div role="tab" id="headingTen" class="panel-heading">
-            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="false" aria-controls="collapseTen" class="collapsed">MARMITAS</a></h4>
+            <h4 class="panel-title"> <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="false" aria-controls="collapseTen" class="collapsed">MARMITAS</a></h4>
           </div>
           <div id="collapseTen" role="tabpanel" aria-labelledby="headingTen" class="panel-collapse collapse">
             <div class="panel-body"></div>
@@ -200,11 +213,35 @@
               <li>ELECTRICAS Y GAS</li>
               <li>DESDE 165 - 725 LITROS</li>
               <li>100 % ACERO INOXIDABLE</li>
+              <label for="id9" class="lista2">
+                <p>Ver imagen</p>
+              </label>
             </ul>
           </div>
         </div>
       </div>
-      <div class="Maquinaria-gallery"><img id="" src="./public/images/maquinaria/c35.png" class="Maquinaria-gallery_items"/></div>
+      <div class="Maquinaria-gallery">
+        <div class="slider">
+          <input id="id1" checked="checked" name="slide_switch" type="radio"/>
+          <label for="id1"></label><img src="./public/images/maquinaria/cortadoraIndustrial.jpg"/>
+          <input id="id2" name="slide_switch" type="radio"/>
+          <label for="id2"></label><img src="./public/images/maquinaria/rebanadoracws576.jpg"/>
+          <input id="id3" name="slide_switch" type="radio"/>
+          <label for="id3"></label><img src="./public/images/maquinaria/cortadoraIndustrial.jpg"/>
+          <input id="id4" name="slide_switch" type="radio"/>
+          <label for="id4"></label><img src="./public/images/maquinaria/cortadoraxMenor.jpg"/>
+          <input id="id5" name="slide_switch" type="radio"/>
+          <label for="id5"></label><img src="./public/images/maquinaria/molino.jpg"/>
+          <input id="id6" name="slide_switch" type="radio"/>
+          <label for="id6"></label><img src="./public/images/maquinaria/embutidoPiston.jpg"/>
+          <input id="id7" name="slide_switch" type="radio"/>
+          <label for="id7"></label><img src="./public/images/maquinaria/mezcladora.jpg"/>
+          <input id="id8" name="slide_switch" type="radio"/>
+          <label for="id8"></label><img src="./public/images/maquinaria/cutters.jpg"/>
+          <input id="id9" name="slide_switch" type="radio"/>
+          <label for="id9"></label><img src="./public/images/maquinaria/css3-image-slider-with-stylized-thumbnails_data/marmitas.jpg"/>
+        </div>
+      </div>
       <!-- FOOTER-->
     </div>
     <div class="Footer">
@@ -266,9 +303,10 @@
       <div class="Footer-layout_copy">
         <p>Epcys y Nova Meats forman parte del <a href="http://gruponm.com/" class="linkGNM">Grupo NM | </a>Todos los derechos reservados © 2015</p>
       </div>
-      <!-- Script		-->
+      <!-- Script-->
     </div>
   </div>
+  <script src="./public/images/maquinaria/css3-image-slider-with-stylized-thumbnails_data/prefixfree.js" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="./public/bootstrap/js/bootstrap.min.js"></script>
   <script src="./public/js/datos.js"></script>
