gallería con png y ajustes visualez

--- a/embasado.html
+++ b/embasado.html
@@ -223,23 +223,23 @@
       <div class="Maquinaria-gallery">
         <div class="slider">
           <input id="id1" checked="checked" name="slide_switch" type="radio"/>
-          <label for="id1"></label><img src="./public/images/maquinaria/cortadoraIndustrial.jpg"/>
+          <label for="id1"></label><img src="./public/images/maquinaria/descortezadora.png"/>
           <input id="id2" name="slide_switch" type="radio"/>
-          <label for="id2"></label><img src="./public/images/maquinaria/rebanadoracws576.jpg"/>
+          <label for="id2"></label><img src="./public/images/maquinaria/rebanadoracws576.png"/>
           <input id="id3" name="slide_switch" type="radio"/>
-          <label for="id3"></label><img src="./public/images/maquinaria/cortadoraIndustrial.jpg"/>
+          <label for="id3"></label><img src="./public/images/maquinaria/cortadoraIndustrial.png"/>
           <input id="id4" name="slide_switch" type="radio"/>
-          <label for="id4"></label><img src="./public/images/maquinaria/cortadoraxMenor.jpg"/>
+          <label for="id4"></label><img src="./public/images/maquinaria/cortadoraxMenor.png"/>
           <input id="id5" name="slide_switch" type="radio"/>
-          <label for="id5"></label><img src="./public/images/maquinaria/molino.jpg"/>
+          <label for="id5"></label><img src="./public/images/maquinaria/molino.png"/>
           <input id="id6" name="slide_switch" type="radio"/>
-          <label for="id6"></label><img src="./public/images/maquinaria/embutidoPiston.jpg"/>
+          <label for="id6"></label><img src="./public/images/maquinaria/embutidoPiston.png"/>
           <input id="id7" name="slide_switch" type="radio"/>
-          <label for="id7"></label><img src="./public/images/maquinaria/mezcladora.jpg"/>
+          <label for="id7"></label><img src="./public/images/maquinaria/mezcladora.png"/>
           <input id="id8" name="slide_switch" type="radio"/>
-          <label for="id8"></label><img src="./public/images/maquinaria/cutters.jpg"/>
+          <label for="id8"></label><img src="./public/images/maquinaria/cutters.png"/>
           <input id="id9" name="slide_switch" type="radio"/>
-          <label for="id9"></label><img src="./public/images/maquinaria/css3-image-slider-with-stylized-thumbnails_data/marmitas.jpg"/>
+          <label for="id9"></label><img src="./public/images/maquinaria/marmitas.png"/>
         </div>
       </div>
       <!-- FOOTER-->
